Update registration app for email+zprId data, instead of username.

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
 					</webApp>
 					<stopKey>Stop...</stopKey>
 					<stopPort>9999</stopPort>
+					<webAppXml>src/test/resources/jetty-test.xml</webAppXml>
 				</configuration>
 			</plugin>
 		</plugins>
