--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,4 +41,21 @@
 		<filter-name>CORS</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>All pages</web-resource-name>
+			<url-pattern>/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>user</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<login-config>
+		<auth-method>BASIC</auth-method>
+		<realm-name>Zorgportaal Rijnmond Sense Proxy</realm-name>
+	</login-config>
+	<security-role>
+		<role-name>user</role-name>
+	</security-role>
 </web-app>
